--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quos deleniti doloribus impedit voluptatum asperiores ipsam omnis numquam minima ab alias eaque, excepturi sed non quisquam esse explicabo. Eos, itaque. </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quos deleniti doloribus impedit voluptatum asperiores ipsam omnis numquam minima ab alias eaque, excepturi sed non quisquam esse explicabo. Eos, itaque. </p>
 </body>
 </html>
